# Spend-Sense-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_WorkingSoftware.md  STATUS.md  demo_script.md  docker-compose.yml  main.py  pyproject.toml  requirement.md
chroma_data/: chroma.sqlite3
docs/: SAD.md  SDP.md  SRS.md  deployment.md  testing.md
frontend/: .env.example  .gitignore  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: AddTransactionModal.tsx  FinancialReportModal.tsx
frontend/src/components/layout/: Navigation.tsx  NotificationBell.tsx
frontend/src/hooks/: useApiData.ts
frontend/src/lib/: api.ts  auth.tsx  categories.ts  derive.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  GoalsPage.tsx  InvestmentPage.tsx  LoginPage.tsx  MarketPage.tsx  SettingsPage.tsx
migrations/versions/: a1b2c3d4e5f6_add_goals_and_preferences.py  dd69ecde196e_add_investment_tables.py
src/: pipeline.py
src/api/: schemas.py
src/api/routes/: auth.py  feedback.py  goals.py  insights.py  investment.py  market.py  preferences.py  receipts.py  reports.py  transactions.py
src/auth/: dependencies.py  service.py
src/cache/: vector_store.py
src/core/: config.py  logging.py  market_data.py  stress_tester.py  tool_result.py
src/db/: base.py  models.py
src/embedding/: embedder.py
src/llm/: gemini_client.py
src/models/: expense.py
src/services/: __init__.py  market_context_service.py  market_data_service.py
src/vision/: detector.py  ocr.py  reconstructor.py
tests/: conftest.py  test_auth_api.py  test_detector.py  test_detector_more.py  test_embedder.py  test_gemini_call.py  test_gemini_client.py  test_goals_api.py  test_insights_api.py  test_investment.py  test_investment_api.py  test_market_data.py  test_ocr_extract.py  test_ocr_helpers.py  test_ocr_parsing.py  test_pipeline.py  test_preferences_api.py  test_receipts_feedback_api.py  test_reconstructor.py  test_transactions_api.py  test_vector_store.py
