[project]
name = "spend-sense-ai"
version = "0.1.0"
description = "AI-powered personal expense management with semantic caching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Vision: OCR
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "vietocr>=0.3.7",
    # Vision: Object detection
    "ultralytics>=8.3.0",
    # Embeddings
    "sentence-transformers>=3.3.0",
    # Vector store
    "chromadb>=0.6.0",
    "onnxruntime<1.24.0",
    # Utilities
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "numpy>=2.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.10.0",
    "email-validator>=2.2.0",
    "huggingface-hub>=1.14.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
